--- a/doc/payment/1.MAIN-REFERENCE.md
+++ b/doc/payment/1.MAIN-REFERENCE.md
@@ -31,14 +31,15 @@ The JobSphere Payment System is a comprehensive wallet-based payment platform de
 
 ### Key Highlights
 
-- **Stripe Integration**: Real money deposits via Stripe Checkout and payouts via Stripe Connect
-- **Wallet-Based Tracking**: Internal wallet system tracks all transactions in database
-- **Automated Commissions**: Platform fees and service fees are automatically calculated and distributed
+- **Stripe Integration**: Stripe Checkout for deposits (browser-based), Stripe Connect for admin-approved payouts
+- **Wallet-Based Tracking**: Internal wallet system tracks all transactions in database (Stripe as "bank")
+- **Minimal Real Money Transfers**: Only deposits and admin-approved payouts involve actual Stripe transfers
+- **Simplified Balance System**: Single wallet balance (no escrow), all transactions via DB adjustments
 - **One Offer Per Job**: Simplified workflow with single offer acceptance
-- **Automatic Refunds**: Failed transactions and cancellations trigger instant wallet adjustments
+- **Automatic Refunds**: Cancellations and rejections trigger instant DB wallet adjustments
 - **Real-Time Updates**: WebSocket integration for instant notifications
 - **Transaction History**: Complete audit trail of all financial activities
-- **Admin-Approved Payouts**: Contractors request withdrawals, admin approves via Stripe Connect
+- **Admin-Approved Payouts**: All contractor payments require admin approval and Stripe Connect transfer
 
 ---
 
@@ -49,45 +50,55 @@ The JobSphere Payment System is a comprehensive wallet-based payment platform de
 The payment system consists of several interconnected modules:
 
 **Wallet Management**
-- Handles user balances (tracked in database)
-- Processes deposits via Stripe Checkout
+
+- Handles user balances (single balance tracked in database)
+- Processes deposits via Stripe Checkout (browser-based, not in-app)
 - Processes withdrawals via Stripe Connect (admin-approved)
 - Tracks lifetime earnings and spending
 - Supports wallet freeze functionality
+- **No Escrow System**: All transactions via simple balance adjustments
 
 **Stripe Integration**
-- Stripe Checkout for customer deposits (hosted payment page)
-- Stripe Connect for contractor payouts (admin-initiated transfers)
-- Webhook handling for payment confirmations
+
+- Stripe Checkout for customer deposits (returns URL for browser opening)
+- Stripe Connect for contractor payouts (admin-initiated transfers only)
+- Webhook handling for deposit confirmations
+- **Stripe as Bank**: Minimal real money transfers, wallet tracks all transactions
 - Secure payment processing with PCI compliance
 
 **Offer System**
+
 - Manages job offers between customers and contractors
 - Enforces one-offer-per-job rule
-- Handles offer acceptance and rejection
-- Implements automatic expiration (7 days)
+- Handles offer acceptance and rejection via DB wallet adjustments only
+- Implements automatic expiration (7 days) with automated refunds
+- **No Real Money Movement**: All offer transactions via database balance updates
 
 **Transaction Engine**
+
 - Records all financial movements in database
 - Supports multiple transaction types
 - Maintains complete audit trail
-- Wallet-based balance tracking (no real-time Stripe balance sync)
+- **Database-Only Tracking**: Real money transfers only for deposits and admin-approved payouts
 
 **Job Payment Integration**
+
 - Links jobs with payment processing
 - Manages job status transitions
-- Triggers payment releases
-- Handles cancellations and refunds
+- Triggers payment releases via admin approval
+- Handles cancellations and refunds via DB adjustments
 
 **Admin Service**
+
 - Auto-creates admin user and wallet
-- Manages commission collection
-- Approves contractor withdrawal requests
-- Initiates Stripe Connect transfers
+- Manages commission collection via DB adjustments
+- Approves contractor payout requests
+- Initiates Stripe Connect transfers for approved payouts
 - Provides system-wide payment oversight
 
 **Automated Jobs**
-- Offer expiration cron job (runs hourly)
+
+- Offer expiration cron job (runs hourly) with automatic DB refunds
 - Automatic wallet adjustments for refunds
 - Notification dispatch
 - Application status reset
@@ -98,39 +109,41 @@ The payment system consists of several interconnected modules:
 
 ### 1. Wallet System
 
-Each user has a dedicated wallet with two balance types:
+Each user has a dedicated wallet with a single balance:
 
 **Available Balance**
+
 - Money available for sending offers or withdrawal
 - Updated on deposits, refunds, and payments received
 - Protected from unauthorized access
-
-**Escrow Balance**
-- Money held for pending offers
-- Released on job completion or offer rejection
-- Separate from available funds for transparency
+- **No Escrow**: All transactions via simple balance adjustments
 
 **Transaction History**
+
 - Complete record of all wallet activities
 - Filterable by transaction type
 - Paginated for performance
 - Includes sender and receiver details
 
 **Deposit Functionality**
+
 - Minimum deposit: $10
-- Integrated with Stripe Checkout (hosted payment page)
-- Backend generates Stripe Checkout Session URL
+- Backend creates Stripe Checkout Session and returns URL
 - Customer opens URL in default browser (not in-app)
-- Webhook confirms payment and updates wallet balance
+- Customer completes payment on Stripe-hosted page
+- Webhook confirms payment and updates wallet balance in database
+- **Real Money Transfer**: Only time actual money moves to Stripe
 - Transaction logging in database
 
 **Withdrawal System** (Contractors Only)
+
 - Minimum withdrawal: $10
 - Maximum withdrawal: $10,000
 - Contractor requests withdrawal via API
 - Request creates pending withdrawal record
 - Admin reviews request in admin dashboard
 - Admin approves and initiates Stripe Connect transfer
+- **Real Money Transfer**: Admin-initiated actual money movement from Stripe
 - Estimated arrival: 2-3 business days
 - Requires sufficient available balance
 - Blocked if wallet is frozen
@@ -138,40 +151,51 @@ Each user has a dedicated wallet with two balance types:
 ### 2. Offer Management
 
 **Sending Offers** (Customer Only)
+
 - Specify job amount, timeline, and description
 - Automatic commission calculation
-- Instant escrow hold
+- **No Escrow Hold**: Balance validation only, no immediate deduction
 - One offer per job enforcement
 - Balance validation before processing
 
 **Accepting Offers** (Contractor Only)
+
 - Reviews offer details and earnings breakdown
 - Accepts to start job
-- Wallet balances updated immediately (no real money transfer)
-- Customer wallet decreased by total charge
-- Admin wallet increased by total charge
+- **Database-Only Transaction**: Wallet balances updated immediately
+  - Customer wallet: decreased by total charge ($105)
+  - Admin wallet: increased by total charge ($105)
+- **No Real Money Transfer**: Only database balance adjustments
 - Updates job status to "assigned"
 - Rejects other pending applications
 
 **Rejecting Offers** (Contractor Only)
+
 - Provides rejection reason
-- Wallet balances reversed immediately
-- Admin wallet decreased by total charge
-- Customer wallet increased by total charge (full refund)
+- **Database-Only Refund**: If offer was accepted, wallet balances reversed
+  - Admin wallet: decreased by total charge
+  - Customer wallet: increased by total charge (full refund)
+- **No Real Money Transfer**: Only database balance adjustments
 - Resets application status
 - Allows customer to send new offer
 - Sends notification to customer
 
 **Automatic Expiration**
+
 - Offers expire after 7 days
-- Automated hourly check
-- Wallet balances reversed (full refund)
+- Automated hourly cron job check
+- **Database-Only Refund**: If offer was accepted, wallet balances reversed
+  - Admin wallet: decreased by total charge
+  - Customer wallet: increased by total charge (full refund)
+- **No Real Money Transfer**: Only database balance adjustments
 - Application status reset
-- Notification to customer
+- Notification sent
+- Customer can send new offer
 
 ### 3. Job Payment Processing
 
 **Job Status Flow**
+
 - **Open**: Accepting applications
 - **Assigned**: Offer accepted, contractor assigned
 - **In Progress**: Work actively being performed
@@ -179,6 +203,7 @@ Each user has a dedicated wallet with two balance types:
 - **Cancelled**: Job cancelled, refunds processed
 
 **Payment Release** (On Completion)
+
 - Customer marks job as complete
 - Creates pending completion request
 - Admin reviews in admin dashboard
@@ -191,6 +216,7 @@ Each user has a dedicated wallet with two balance types:
 - Notifications sent to all parties
 
 **Job Cancellation**
+
 - Available before completion
 - Full refund to customer if offer exists
 - Wallet balances reversed immediately:
@@ -202,18 +228,21 @@ Each user has a dedicated wallet with two balance types:
 ### 4. Commission System
 
 **Platform Fee (5%)**
+
 - Charged when customer sends offer
 - Transferred to admin when offer accepted
 - Non-refundable after acceptance
 - Covers platform operating costs
 
 **Service Fee (20%)**
+
 - Deducted from job amount
 - Transferred to admin on job completion
 - Applied to contractor payout calculation
 - Covers transaction processing and support
 
 **Total Admin Commission (25%)**
+
 - Combined platform fee and service fee
 - Distributed at different transaction stages
 - Transparent calculation and display
@@ -222,6 +251,7 @@ Each user has a dedicated wallet with two balance types:
 ### 5. Notification System
 
 **Real-Time Notifications** (WebSocket/Socket.IO)
+
 - Offer received
 - Offer accepted/rejected
 - Payment released
@@ -229,6 +259,7 @@ Each user has a dedicated wallet with two balance types:
 - Withdrawal processed
 
 **Push Notifications** (FCM)
+
 - Mobile app integration
 - Critical payment events
 - Configurable per user
@@ -242,14 +273,14 @@ Each user has a dedicated wallet with two balance types:
 
 For a $100 job:
 
-| Component | Amount | Recipient | Timing |
-|-----------|--------|-----------|--------|
-| Job Budget | $100.00 | N/A | Initial |
-| Platform Fee (5%) | $5.00 | Admin | Offer Acceptance |
-| Total Charge | **$105.00** | Customer Pays | Offer Sent |
-| Service Fee (20%) | $20.00 | Admin | Job Completion |
-| Contractor Payout (80%) | **$80.00** | Contractor | Job Completion |
-| Admin Total (25%) | $25.00 | Admin | Combined |
+| Component               | Amount      | Recipient     | Timing           |
+| ----------------------- | ----------- | ------------- | ---------------- |
+| Job Budget              | $100.00     | N/A           | Initial          |
+| Platform Fee (5%)       | $5.00       | Admin         | Offer Acceptance |
+| Total Charge            | **$105.00** | Customer Pays | Offer Sent       |
+| Service Fee (20%)       | $20.00      | Admin         | Job Completion   |
+| Contractor Payout (80%) | **$80.00**  | Contractor    | Job Completion   |
+| Admin Total (25%)       | $25.00      | Admin         | Combined         |
 
 ### Customer Perspective
 
@@ -270,7 +301,7 @@ For a $100 job:
 ### Admin Revenue
 
 - Receives $5 when offer accepted (5% platform fee)
-- Receives $20 when job completed (20% service fee)  
+- Receives $20 when job completed (20% service fee)
 - Total commission: $25 per $100 job (25%)
 - Auto-transferred to admin wallet
 - Tracked in transaction history
@@ -282,6 +313,7 @@ For a $100 job:
 ### Complete Transaction Journey
 
 **Step 1: Customer Preparation**
+
 - Customer registers and logs in
 - Requests deposit via API
 - Backend creates Stripe Checkout Session
@@ -295,12 +327,14 @@ For a $100 job:
 - Waits for contractor applications
 
 **Step 2: Contractor Application**
+
 - Contractor finds job
 - Submits application with message
 - Application visible to customer
 - Status: "pending"
 
 **Step 3: Offer Creation**
+
 - Customer reviews applications
 - Selects preferred contractor
 - Sends offer with amount, timeline, description
@@ -316,6 +350,7 @@ For a $100 job:
 **Step 4: Offer Response**
 
 **Option A: Acceptance**
+
 - Contractor reviews offer
 - Accepts offer
 - Wallet balances updated immediately:
@@ -328,6 +363,7 @@ For a $100 job:
 - **Note**: No real money transferred to Stripe yet
 
 **Option B: Rejection**
+
 - Contractor reviews offer
 - Provides rejection reason
 - No wallet changes (offer was pending)
@@ -336,12 +372,14 @@ For a $100 job:
 - Notification sent to customer
 
 **Step 5: Work Execution**
+
 - Contractor updates status to "in_progress"
 - Performs work according to timeline
 - Communicates with customer
 - Prepares for completion
 
 **Step 6: Job Completion**
+
 - Customer marks job as complete
 - Creates pending completion request
 - Admin reviews request in admin dashboard
@@ -356,6 +394,7 @@ For a $100 job:
 - Notifications sent
 
 **Step 7: Withdrawal (Contractor)**
+
 - Contractor has $80 available
 - Requests withdrawal via API (e.g., $50)
 - System validates balance
@@ -370,6 +409,7 @@ For a $100 job:
 ### Alternative Flows
 
 **Job Cancellation**
+
 - Customer or admin cancels job
 - Cancellation reason recorded
 - If offer accepted: Wallet balances reversed
@@ -379,6 +419,7 @@ For a $100 job:
 - Notification to contractor
 
 **Offer Expiration**
+
 - Offer reaches 7-day limit
 - Automated job identifies expired offer
 - If offer was accepted: Wallet balances reversed
@@ -404,21 +445,26 @@ Content-Type: application/json
 ### Wallet Endpoints
 
 #### Get Wallet Balance
+
 ```
 GET /api/wallet
 ```
+
 **Authentication**: Required  
 **Returns**: User's wallet with available balance (tracked in database)
 
 #### Deposit Money
+
 ```
 POST /api/wallet/deposit
 ```
+
 **Authentication**: Required  
 **Body**: `amount` (number)  
 **Validation**: Minimum $10  
 **Returns**: Stripe Checkout Session URL
 **Flow**:
+
 1. Backend creates Stripe Checkout Session
 2. Returns session URL to client
 3. Client opens URL in default browser
@@ -427,35 +473,43 @@ POST /api/wallet/deposit
 6. Backend verifies webhook and updates wallet
 
 #### Request Withdrawal
+
 ```
 POST /api/wallet/withdraw
 ```
+
 **Authentication**: Required (Contractors only)  
 **Body**: `amount` (number)  
 **Validation**: Min $10, Max $10,000, sufficient balance  
 **Returns**: Withdrawal request confirmation
 **Flow**:
+
 1. Creates pending withdrawal request
 2. Admin reviews in dashboard
 3. Admin approves and initiates Stripe Connect transfer
 4. Wallet balance updated after approval
 
 #### Get Transaction History
+
 ```
 GET /api/wallet/transactions
 ```
+
 **Authentication**: Required  
 **Query Parameters**: `page`, `limit`, `type` (optional)  
 **Returns**: Paginated list of transactions
 
 #### Stripe Webhook Handler
+
 ```
 POST /api/webhooks/stripe
 ```
+
 **Authentication**: Webhook signature verification  
 **Headers**: `Stripe-Signature`  
 **Body**: Stripe event payload  
 **Handles**:
+
 - `checkout.session.completed` - Updates wallet on successful deposit
 - `checkout.session.async_payment_succeeded` - Handles delayed payments
 - `checkout.session.async_payment_failed` - Handles failed payments
@@ -463,28 +517,35 @@ POST /api/webhooks/stripe
 ### Offer Endpoints
 
 #### Send Offer
+
 ```
 POST /api/job-request/:applicationId/send-offer
 ```
+
 **Authentication**: Required (Customer only)  
 **Body**: `amount` (number), `timeline` (string), `description` (string)  
-**Validation**: 
+**Validation**:
+
 - Amount: $10-$10,000
 - Timeline: 1-100 characters
 - Description: 10-1000 characters  
-**Returns**: Offer details, wallet balance, commission breakdown
+  **Returns**: Offer details, wallet balance, commission breakdown
 
 #### Accept Offer
+
 ```
 POST /api/job-request/offer/:offerId/accept
 ```
+
 **Authentication**: Required (Contractor only)  
 **Returns**: Updated offer, job status, payment breakdown
 
 #### Reject Offer
+
 ```
 POST /api/job-request/offer/:offerId/reject
 ```
+
 **Authentication**: Required (Contractor only)  
 **Body**: `reason` (string, optional)  
 **Returns**: Updated offer status, refund amount
@@ -492,25 +553,31 @@ POST /api/job-request/offer/:offerId/reject
 ### Job Endpoints
 
 #### Update Job Status
+
 ```
 PATCH /api/job/:id/status
 ```
+
 **Authentication**: Required  
 **Body**: `status` (string)  
 **Valid Transitions**:
+
 - open → assigned, cancelled
 - assigned → in_progress, cancelled
 - in_progress → completed, cancelled  
-**Returns**: Updated job details
+  **Returns**: Updated job details
 
 #### Complete Job
+
 ```
 POST /api/job/:id/complete
 ```
+
 **Authentication**: Required (Customer only)  
 **Prerequisites**: Job must be "in_progress"  
 **Returns**: Completed job details, pending admin approval
 **Flow**:
+
 1. Creates completion request
 2. Admin reviews in dashboard
 3. Admin approves completion
@@ -518,9 +585,11 @@ POST /api/job/:id/complete
 5. Admin initiates Stripe Connect transfer to contractor
 
 #### Cancel Job
+
 ```
 POST /api/job/:id/cancel
 ```
+
 **Authentication**: Required (Customer or Admin)  
 **Body**: `reason` (string, optional)  
 **Returns**: Cancelled job details, refund amount
@@ -532,36 +601,42 @@ POST /api/job/:id/cancel
 ### Frontend Integration (React/Next.js)
 
 **Service Setup**
+
 - Create service classes for wallet, offers, and jobs
 - Implement centralized API client with interceptors
 - Handle authentication tokens securely
 - Add error handling middleware
 
 **Wallet Integration**
+
 - Display available and escrow balances prominently
 - Show deposit and withdrawal options
 - Implement transaction history view with filtering
 - Add balance refresh on navigation
 
 **Offer Flow UI**
+
 - Create offer dialog with commission breakdown
 - Show real-time balance validation
 - Display contractor earnings calculation
 - Add confirmation steps
 
 **Job Management**
+
 - Implement status badges with color coding
 - Add complete/cancel buttons based on role
 - Show payment status in job details
 - Handle status transitions with confirmation
 
 **Error Handling**
+
 - Display user-friendly error messages
 - Handle insufficient balance gracefully
 - Show loading states during transactions
 - Implement retry mechanisms
 
 **Real-Time Updates**
+
 - Integrate Socket.IO client
 - Listen for payment events
 - Update UI on notifications
@@ -570,12 +645,14 @@ POST /api/job/:id/cancel
 ### Mobile Integration (Flutter)
 
 **Service Layer**
+
 - Create Dart service classes
 - Use http package for API calls
 - Implement secure token storage (flutter_secure_storage)
 - Add error handling and retries
 
 **Wallet Features**
+
 - Design wallet widget with balance display
 - Implement deposit flow:
   1. Call backend API to get Stripe Checkout URL
@@ -586,11 +663,13 @@ POST /api/job/:id/cancel
 - Show transaction history with pagination
 
 **Stripe Checkout Integration**
+
 - Use `url_launcher` package to open Stripe Checkout URL
 - Example:
+
   ```dart
   import 'package:url_launcher/url_launcher.dart';
-  
+
   Future<void> openStripeCheckout(String checkoutUrl) async {
     final Uri url = Uri.parse(checkoutUrl);
     if (await canLaunchUrl(url)) {
@@ -598,17 +677,20 @@ POST /api/job/:id/cancel
     }
   }
   ```
+
 - After payment, user returns to app
 - App polls backend or receives push notification
 - Refresh wallet balance
 
 **Offer Management**
+
 - Create offer cards with expandable details
 - Implement accept/reject dialogs
 - Show commission breakdown clearly
 - Add confirmation flows
 
 **Push Notifications**
+
 - Integrate Firebase Cloud Messaging (FCM)
 - Register device token with backend
 - Handle notification payloads
@@ -616,12 +698,14 @@ POST /api/job/:id/cancel
 - Listen for payment confirmation notifications
 
 **Offline Support**
+
 - Cache wallet balance locally
 - Queue transactions when offline
 - Sync on reconnection
 - Show sync status to user
 
 **UI Components**
+
 - Design custom wallet widget
 - Create offer status badges
 - Build transaction list items
@@ -636,6 +720,7 @@ POST /api/job/:id/cancel
 Represents user's financial account:
 
 **Fields**:
+
 - `_id`: Unique identifier
 - `user`: Reference to user document
 - `balance`: Available funds (tracked in database, not synced with Stripe)
@@ -657,6 +742,7 @@ Represents user's financial account:
 Represents job offer between customer and contractor:
 
 **Fields**:
+
 - `_id`: Unique identifier
 - `job`: Reference to job document
 - `customer`: Reference to customer user
@@ -685,6 +771,7 @@ Represents job offer between customer and contractor:
 Records all financial movements:
 
 **Fields**:
+
 - `_id`: Unique identifier
 - `type`: Transaction type
   - `deposit`: Money added to wallet (via Stripe)
@@ -714,6 +801,7 @@ Records all financial movements:
 Extended with payment fields:
 
 **Payment-Related Fields**:
+
 - `contractorId`: Assigned contractor reference
 - `offerId`: Accepted offer reference
 - `status`: Job status (open, assigned, in_progress, completed, cancelled)
@@ -729,6 +817,7 @@ Extended with payment fields:
 ### Customer
 
 **Allowed Actions**:
+
 - Deposit money into wallet (via Stripe Checkout)
 - Send offers to contractors
 - Mark jobs as complete (creates pending request for admin)
@@ -737,6 +826,7 @@ Extended with payment fields:
 - View wallet balance
 
 **Restrictions**:
+
 - Cannot withdraw money
 - Cannot accept their own offers
 - Cannot update job status to "in_progress"
@@ -744,6 +834,7 @@ Extended with payment fields:
 ### Contractor
 
 **Allowed Actions**:
+
 - Accept or reject offers
 - Update job status to "in_progress"
 - Request withdrawal from wallet (creates pending request)
@@ -751,6 +842,7 @@ Extended with payment fields:
 - View wallet balance
 
 **Restrictions**:
+
 - Cannot send offers
 - Cannot mark jobs as complete
 - Cannot cancel jobs (only customer/admin can)
@@ -759,6 +851,7 @@ Extended with payment fields:
 ### Admin
 
 **Allowed Actions**:
+
 - Receive platform fees and service fees (wallet adjustments)
 - Approve job completion requests
 - Initiate Stripe Connect transfers to contractors
@@ -770,6 +863,7 @@ Extended with payment fields:
 - Override system restrictions
 
 **Automatic Functions**:
+
 - Admin user auto-created on first run
 - Admin wallet auto-created
 - Commission wallet adjustments automatic
@@ -781,17 +875,18 @@ Extended with payment fields:
 
 ### Common Error Codes
 
-| Code | Status | Meaning |
-|------|--------|---------|
-| 400 | Bad Request | Invalid input or validation failed |
-| 401 | Unauthorized | Missing or invalid authentication token |
-| 403 | Forbidden | Insufficient permissions for action |
-| 404 | Not Found | Requested resource doesn't exist |
-| 500 | Server Error | Internal server error occurred |
+| Code | Status       | Meaning                                 |
+| ---- | ------------ | --------------------------------------- |
+| 400  | Bad Request  | Invalid input or validation failed      |
+| 401  | Unauthorized | Missing or invalid authentication token |
+| 403  | Forbidden    | Insufficient permissions for action     |
+| 404  | Not Found    | Requested resource doesn't exist        |
+| 500  | Server Error | Internal server error occurred          |
 
 ### Error Response Format
 
 All errors follow consistent structure:
+
 ```json
 {
   "status": 400,
@@ -839,12 +934,14 @@ All errors follow consistent structure:
 ### Authentication & Authorization
 
 **JWT Token System**
+
 - Access tokens valid for 15 days (development)
 - Refresh tokens valid for 30 days
 - Tokens include user ID and role
 - Validated on every protected endpoint
 
 **Role-Based Access Control**
+
 - Customer-only endpoints (send offer, complete job, cancel)
 - Contractor-only endpoints (accept/reject offer, withdraw)
 - Admin endpoints (override actions, freeze wallets)
@@ -853,18 +950,21 @@ All errors follow consistent structure:
 ### Input Validation
 
 **Zod Schema Validation**
+
 - All inputs validated before processing
 - Type checking and constraints enforced
 - Custom error messages for clarity
 - Prevents injection attacks
 
 **Amount Validation**
+
 - Positive numbers only
 - Minimum and maximum limits
 - Decimal precision controlled
 - Currency format validated
 
 **String Validation**
+
 - Length constraints enforced
 - Character set restrictions
 - SQL injection prevention
@@ -873,18 +973,21 @@ All errors follow consistent structure:
 ### Transaction Security
 
 **Balance Verification**
+
 - Pre-transaction balance check
 - Atomic balance updates
 - Race condition prevention
 - Rollback on failures
 
 **Escrow Protection**
+
 - Funds held securely until completion
 - Cannot be accessed during hold
 - Automatic release on completion/cancellation
 - Separate from available balance
 
 **Audit Trail**
+
 - Every transaction recorded
 - Immutable transaction history
 - Sender and receiver tracked
@@ -893,12 +996,14 @@ All errors follow consistent structure:
 ### Wallet Security
 
 **Freeze Functionality**
+
 - Admin can freeze suspicious wallets
 - Prevents all transactions when frozen
 - User notified of freeze
 - Requires admin intervention to unfreeze
 
 **Withdrawal Limits**
+
 - Minimum: $10
 - Maximum: $10,000 per transaction
 - Prevents money laundering
@@ -911,6 +1016,7 @@ All errors follow consistent structure:
 ### Manual Testing Flow
 
 **Prerequisites**
+
 - Create test customer account
 - Create test contractor account
 - Obtain authentication tokens
@@ -994,12 +1100,14 @@ All errors follow consistent structure:
 ### API Response Validation
 
 **Success Responses**
+
 - Status code 200 or 201
 - Consistent response structure
 - All required fields present
 - Correct data types
 
 **Error Responses**
+
 - Appropriate status codes
 - Clear error messages
 - Error details when applicable
@@ -1008,12 +1116,14 @@ All errors follow consistent structure:
 ### Performance Testing
 
 **Response Times**
+
 - Wallet operations: < 500ms
 - Offer operations: < 1000ms
 - Transaction queries: < 2000ms
 - Job operations: < 1000ms
 
 **Concurrency**
+
 - Multiple simultaneous offers
 - Parallel wallet operations
 - Concurrent job updates
@@ -1026,6 +1136,7 @@ All errors follow consistent structure:
 ### Environment Configuration
 
 **Required Variables**
+
 ```
 ADMIN_USER_ID=<optional_admin_id>
 DATABASE_URL=<mongodb_connection_string>
@@ -1036,6 +1147,7 @@ STRIPE_WEBHOOK_SECRET=<webhook_secret>
 ```
 
 **Optional Variables**
+
 ```
 FCM_SERVER_KEY=<firebase_key>
 SMTP_HOST=<email_host>
@@ -1073,6 +1185,7 @@ SMTP_PASS=<email_password>
    - Set up payout schedules
 
 **Note**: For complete Stripe setup instructions, see:
+
 - Stripe Checkout: https://docs.stripe.com/payments/checkout
 - Stripe Connect: https://docs.stripe.com/connect
 - Webhook handling: https://docs.stripe.com/webhooks
@@ -1080,12 +1193,14 @@ SMTP_PASS=<email_password>
 ### Database Setup
 
 **Initial Setup**
+
 - No manual migrations required
 - Admin user auto-creates on first run
 - Admin wallet auto-creates automatically
 - Indexes created automatically
 
 **Data Persistence**
+
 - MongoDB for all data storage
 - Transaction logs immutable
 - Wallet balances atomic
@@ -1094,12 +1209,14 @@ SMTP_PASS=<email_password>
 ### Service Registration
 
 **Automated Jobs**
+
 - Offer expiration runs hourly
 - Starts automatically on server launch
 - Logs all processed offers
 - Error handling per offer
 
 **Socket.IO Server**
+
 - Real-time notification support
 - Automatic reconnection
 - Room-based messaging
@@ -1108,12 +1225,14 @@ SMTP_PASS=<email_password>
 ### Health Checks
 
 **System Health**
+
 - Database connectivity
 - Admin user existence
 - Admin wallet existence
 - Automated job status
 
 **Monitoring Points**
+
 - Failed transactions
 - Stuck offers
 - Frozen wallets
@@ -1126,11 +1245,13 @@ SMTP_PASS=<email_password>
 ### Documentation
 
 **API Documentation**
+
 - Swagger UI: `/swagger`
 - Scalar UI: `/scaler`
 - JSON Specification: `/api-docs.json`
 
 **Implementation Guides**
+
 - `doc/payment/IMPLEMENTATION_GUIDE.md`: Complete backend guide
 - `doc/payment/API_DESIGN.md`: API architecture
 - `doc/payment/DATABASE_SCHEMA.md`: Database design
@@ -1139,6 +1260,7 @@ SMTP_PASS=<email_password>
 - `doc/payment/STRIPE_DASHBOARD_SETUP.md`: Stripe dashboard setup
 
 **Frontend Resources**
+
 - `doc/payment/IMPLEMENTATION/FRONTEND_API_DOCUMENTATION.md`: Complete API reference
 - `doc/payment/IMPLEMENTATION/QUICK_START_GUIDE.md`: Quick reference
 - `doc/payment/IMPLEMENTATION/POSTMAN_COLLECTION_GUIDE.md`: Testing guide
@@ -1146,11 +1268,13 @@ SMTP_PASS=<email_password>
 ### Technical Support
 
 **Contact Channels**
+
 - Backend Team: backend@jobsphere.com
 - Technical Support: support@jobsphere.com
 - Emergency Issues: emergency@jobsphere.com
 
 **Response Times**
+
 - Critical Issues: 1 hour
 - High Priority: 4 hours
 - Medium Priority: 24 hours
@@ -1159,6 +1283,7 @@ SMTP_PASS=<email_password>
 ### Development Resources
 
 **Source Code**
+
 - Admin Service: `src/common/service/admin.service.ts`
 - Wallet Services: `src/api/wallet/services/`
 - Offer Services: `src/api/job-request/services/`
@@ -1166,6 +1291,7 @@ SMTP_PASS=<email_password>
 - Automated Jobs: `src/jobs/`
 
 **Configuration**
+
 - Payment Config: `src/config/payment-config.ts`
 - Validation Schemas: `src/api/*/validation.ts`
 - Routes: `src/api/*/routes.ts`
@@ -1177,6 +1303,7 @@ SMTP_PASS=<email_password>
 ### Version 2.0.0 (January 28, 2026)
 
 **Major Update: Stripe Integration**
+
 - ✅ Stripe Checkout for customer deposits
 - ✅ Stripe Connect for contractor payouts
 - ✅ Webhook handling for payment confirmations
@@ -1187,6 +1314,7 @@ SMTP_PASS=<email_password>
 - ✅ Updated documentation for new flow
 
 **Breaking Changes**
+
 - Removed `escrowBalance` field from Wallet model
 - Changed deposit flow to use Stripe Checkout URLs
 - Changed withdrawal flow to require admin approval
@@ -1194,6 +1322,7 @@ SMTP_PASS=<email_password>
 - Updated transaction types to reflect new flow
 
 **System Status**
+
 - Build: ✅ Passing
 - Stripe Integration: ✅ Ready for implementation
 - Documentation: ✅ Complete
@@ -1203,6 +1332,7 @@ SMTP_PASS=<email_password>
 ### Version 1.0.0 (November 13, 2025)
 
 **Initial Release**
+
 - ✅ Wallet management system
 - ✅ Offer creation and management
 - ✅ Job payment processing
@@ -1215,6 +1345,7 @@ SMTP_PASS=<email_password>
 - ✅ Production-ready deployment
 
 **System Status**
+
 - Build: ✅ Passing
 - Tests: ✅ Verified
 - Documentation: ✅ Complete
@@ -1226,6 +1357,7 @@ SMTP_PASS=<email_password>
 ## Quick Reference
 
 ### Commission Calculation
+
 ```
 Customer Pays = Job Budget × 1.05
 Platform Fee = Job Budget × 0.05 (on acceptance)
@@ -1235,6 +1367,7 @@ Admin Total = Job Budget × 0.25 (combined)
 ```
 
 ### Status Flow
+
 ```
 Job: open → assigned → in_progress → completed
 Offer: pending → accepted → completed
@@ -1242,6 +1375,7 @@ Application: pending → accepted/rejected
 ```
 
 ### Key Limits
+
 ```
 Minimum Deposit: $10
 Minimum Withdrawal: $10
